--- a/src/App.css
+++ b/src/App.css
@@ -112,11 +112,10 @@
 }
 
 .highlight-blue {
-  color:#fff;
-  /*background-color:#1e6add;*/
-  padding:50px 0;
-  background: url("assets/logo_background.png") no-repeat center;
-  background-size:cover;
+  color: #fff;
+  padding: 50px 0;
+  background: url("/assets/logo_background.png") no-repeat center;
+  background-size: cover;
 }
 
 .main-logo {
@@ -543,10 +542,9 @@ iframe {
 }
 
 .register-photo .image-holder {
-  display:table-cell;
-  width:auto;
-  background:url("assets/rides/ferris_wheel.png");
-  background-size:cover;
+  display: table-cell;
+  width: auto;
+  background: url("/assets/rides/ferris_wheel.png") center/cover no-repeat;
 }
 
 .register-photo .form-container {
