--- a/src/App.css
+++ b/src/App.css
@@ -194,14 +194,7 @@
     margin: 0 auto;
   }
 }
-
-
-
-
-
-
-
-
+ 
 
 .highlight-blue {
   color: #fff;
@@ -352,34 +345,7 @@
   margin-bottom:40px;
 }
 
-.navbar .navbar-brand {
-}
 
-.navbar .navbar-brand {
-  margin-left:0px;
-}
-
-.navbar.navbar-dark.navbar-expand-md.bg-dark {
-  text-align:center;
-}
-
-@media (min-width: 768px) {
-  .navbar .container {
-    position: relative;
-  }
-
-  .navbar #navcol-1 {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    width: max-content;
-  }
-
-  .navbar .navbar-nav {
-    flex-direction: row;
-    gap: 18px;
-  }
-}
 
 
 .about-us-text {
@@ -393,6 +359,13 @@
 }
 
 
+.navbar-dark .navbar-nav .nav-link {
+  color: white;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: #ffd700;
+}
 
 
 
@@ -884,7 +857,7 @@ iframe {
 }
 
 .navbar{
-  background: linear-gradient(to right, #933e33c1, #ecc115eb);
+  background: linear-gradient(to right, #933e33f3, #ecc115eb);
 }
 .nav-logo{
   border: 1px solid transparent; 
