Testing padding adjustment for nevbar toggler on mobile devices.

--- a/src/App.css
+++ b/src/App.css
@@ -775,10 +775,10 @@ html {
     height: 200px;
   }
 
-  .navbar-toggler-icon {
+  /* .navbar-toggler-icon {
     margin-right: 32px
 
-  }
+  } */
 }
 
 
