--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,10 @@ html {
 }
 
 /* links */
+.footer-links {
+  padding-left: 120px;
+}
+
 .footer-links h5,
 .footer-social h5 {
   margin: 0 0 12px;
